fix get started link alignment

--- a/style.css
+++ b/style.css
@@ -174,6 +174,12 @@ a:active {
   margin-bottom: 24px;
 }
 
+.design-link,
+.photography-link {
+  display: inline-block;
+  margin-top: 30px;
+}
+
 .footer {
   background: #13183f;
   height: 120px;
@@ -222,7 +228,7 @@ a:active {
 
   .header-wrapper,
   .courses {
-    width: 92%;
+    width: 95%;
     margin: 0 auto;
   }
 
@@ -244,6 +250,7 @@ a:active {
 
   .course-heading {
     margin-bottom: 16px;
+    margin-top: 0;
   }
 
   .courses {
@@ -252,7 +259,8 @@ a:active {
   }
 
   .course {
-    padding: 0 28px;
+    padding-bottom: 32px;
+    padding-top: 5px;
     height: 259px;
   }
 
@@ -262,6 +270,11 @@ a:active {
     font-size: 24px;
     padding: 28px 28px;
     line-height: 32px;
+  }
+
+  .design-link,
+  .photography-link {
+    margin-top: 0;
   }
 
   .footer {
@@ -356,6 +369,11 @@ a:active {
   .courses-intro {
     font-size: 24px;
     padding-top: 56px;
+  }
+
+  .design-link,
+  .photography-link {
+    margin-top: 0;
   }
 
   .courses-wrapper {
